--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.3",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -23,19 +25,24 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "typescript": "^4.8.4",
-    "typescript-cookie": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* popipo@158.160.55.196:/home/popipo/react-burger",
+    "cypress:open": "cypress open"
   },
+  "plugins": [
+    "cypress"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -52,6 +59,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "cypress": "^12.4.1",
+    "cypress-localstorage-commands": "^2.2.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "prettier": "2.7.1"
   }
 }
